웹 2일차 커밋

--- a/day01/html08.html
+++ b/day01/html08.html
@@ -24,7 +24,7 @@
         #header { /* 아이디 속성은 # */
             background-color: antiquewhite;  
             width: 700px;
-            margin: 0 auto; /* auto는 정중아에 위치시킴*/
+            margin: 0 auto; /* auto는 정중앙에 위치시킴*/
         }
         #nav {
             background-color: azure;
