--- a/day14/Day14Study/WebFrontEndApp/wwwroot/index.html
+++ b/day14/Day14Study/WebFrontEndApp/wwwroot/index.html
@@ -29,10 +29,10 @@
                         let isComplete = val.isComplete;
                         $(`<label class="list-group-item d-flex gap-3">
                              <input class="form-check-input flex-shrink-0" 
-                                    type="checkbox" value=""
+                                    type="checkbox" value="" disabled
                                     ${isComplete == 1 ? 'checked' : ''} />
                              <span>
-                               <strong>${val.title}</strong>
+                               [${val.id}] <strong>${val.title}</strong>
                                <small class="d-block text-body-secondary">
                                  <i class="bi bi-calendar-check-fill"></i>
                                  ${val.todoDate.slice(0, 4) + '-' + val.todoDate.slice(4, 6) + '-' + val.todoDate.slice(6, 8)}
@@ -48,24 +48,45 @@
             $('#btnQuery').click(function () {
                 let id = $('#id').val();
 
-                //alert(id);
-                $.getJSON(`http://localhost:6200/api/TodoItems/${id}`, function (data) {
+                if (id == "")
+                {
+                    getData();  // 입력값없이 조회하면 전체조회와 동일
 
-                    $('#todoItems').empty(); // todoItems div태그 내를 전부 비워줌
-                    let isComplete = data.isComplete;
-                    $(`<label class="list-group-item d-flex gap-3">
+                    // 할일 입력영역 데이터 할당
+                    $('#in-id').val('');
+                    $('#in-title').val('');
+                    $('#in-todoDate').val('');
+                    $('#in-isComplete').prop('checked', 0);
+                }
+                else
+                {
+                    //alert(id);
+                    $.getJSON(`http://localhost:6200/api/TodoItems/${id}`, function (data) {
+
+                        $('#todoItems').empty(); // todoItems div태그 내를 전부 비워줌
+                        let isComplete = data.isComplete;
+                        $(`<label class="list-group-item d-flex gap-3">
                          <input class="form-check-input flex-shrink-0" 
-                                type="checkbox" value=""
+                                type="checkbox" value="" disabled
                                 ${isComplete == 1 ? 'checked' : ''} />
                          <span>
-                           <strong>${data.title}</strong>
+                           [${id}] <strong>${data.title}</strong>
                            <small class="d-block text-body-secondary">
                              <i class="bi bi-calendar-check-fill"></i>
                              ${data.todoDate.slice(0, 4) + '-' + data.todoDate.slice(4, 6) + '-' + data.todoDate.slice(6, 8)}
                            </small>
                          </span>
-                       </label>`, { text: '' }).appendTo($('#todoItems'))
-                });
+                       </label>`, { text: '' }).appendTo($('#todoItems'));
+
+                        // 할일 입력영역 데이터 할당
+                        $('#in-id').val(data.id);
+                        $('#in-title').val(data.title);
+                        $('#in-todoDate').val(data.todoDate.slice(0, 4) + '-' + data.todoDate.slice(4, 6) + '-' + data.todoDate.slice(6, 8));
+                        $('#in-isComplete').prop('checked', isComplete == 1);
+
+                    });
+                }
+
             });
 
             // btnInsert 버튼클릭 이벤트 메서드
@@ -93,6 +114,62 @@
                             data = JSON.stringify(data);
                         var item = JSON.parse(data);
                         alert(`${item.id} / 할일이 한건 추가되었습니다.`);
+
+                        // 데이터 재조회!
+                        getData();
+                    }
+                });
+            });
+
+            // btnEdit 버튼클릭 이벤트
+            $('#btnEdit').click(function () {
+                //alert('수정버튼');
+                
+                var todoItem = {
+                    'id': $('#in-id').val(),
+                    'title': $('#in-title').val(),
+                    'todoDate': $('#in-todoDate').val().replace(/-/g, ''),
+                    'isComplete': $('#in-isComplete').prop('checked')
+                };
+
+                //alert(todoItem);
+                console.log(todoItem); // C# Debug.Writeline()
+                // INSERT, UPDATE, DELETE는 .ajax() 사용
+                $.ajax(`http://localhost:6200/api/TodoItems/${todoItem.id}`, {
+                    type: "PUT", // 이외 PUT, DELETE
+                    data: JSON.stringify(todoItem),
+                    contentType: "application/json",
+                    success: () => {    // Response body로 리턴되는 데이터가 없음
+                        alert(`${todoItem.id} / 할일이 한건 수정되었습니다.`);
+
+                        // 데이터 재조회!
+                        getData();
+                    }
+                });
+
+            });
+
+            // btnRemove 버튼클릭 이벤트
+            $('#btnRemove').click(function () {
+                var todoItem = {
+                    'id': $('#in-id').val(),
+                    'title': $('#in-title').val(),
+                    'todoDate': $('#in-todoDate').val().replace(/-/g, ''),
+                    'isComplete': $('#in-isComplete').prop('checked')
+                };
+
+                //alert(todoItem);
+                let id = $('#in-id').val();
+
+                console.log(id); // C# Debug.Writeline()
+
+                // INSERT, UPDATE, DELETE는 .ajax() 사용
+                $.ajax(`http://localhost:6200/api/TodoItems/${todoItem.id}`, {
+                    type: "DELETE", // 이외 PUT, DELETE
+                    data: null,
+                    contentType: "application/json",
+                    success: () => {    // Response body로 리턴되는 데이터가 없음
+                        alert(`${id} / 할일이 한건 한건되었습니다.`);
 
                         // 데이터 재조회!
                         getData();
@@ -165,6 +242,8 @@
                         </div>
                         <div class="mb-0 text-end">
                             <input type="button" class="btn btn-primary" value="저장" id="btnInsert" />
+                            <input type="button" class="btn btn-success" value="수정" id="btnEdit" />
+                            <input type="button" class="btn btn-danger" value="삭제" id="btnRemove" />
                         </div>
                     </div>
                 </div>
